--- a/src/frontend/css/modals/searchModal.css
+++ b/src/frontend/css/modals/searchModal.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     padding: 0px 10px;
-    background-color: var(--editor-dropdown);
+    background-color: var(--dropdown);
     height: 60px;
     width: 400px;
     border-radius: 15px;
@@ -37,7 +37,7 @@
 
 .search-function-modal button {
     background-color: transparent;
-    color: var(--toolbar-btn-text);
+    color: var(--text);
     min-width: 30px;
     height: 30px;
     border-radius: 50%;
