--- a/src/frontend/css/textEditor/toolbarTop.css
+++ b/src/frontend/css/textEditor/toolbarTop.css
@@ -54,7 +54,7 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    background-color: var(--editor-dropdown);
+    background-color: var(--dropdown);
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -78,7 +78,7 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    background-color: var(--editor-dropdown);
+    background-color: var(--dropdown);
     display: flex;
     flex-direction: column;
     width: 350px;
