--- a/src/frontend/css/views/home/homeView.css
+++ b/src/frontend/css/views/home/homeView.css
@@ -38,8 +38,9 @@
 .home .recent-notes {
     max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-template-rows: repeat(auto-fill, 320px);
+    gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
+    grid-template-rows: repeat(auto-fill, 280px);
     margin-bottom: 50px;
 }
 
