--- a/src/frontend/css/views/note/notesView.css
+++ b/src/frontend/css/views/note/notesView.css
@@ -37,8 +37,7 @@
     display: flex;
     column-gap: 10px;
     align-items: center;
-    padding: 5px 0;
-    margin: 15px 0;
+    margin-top: 20px;
     color: var(--text);
 }
 
@@ -54,7 +53,6 @@
 
 .folders {
     max-width: 100%;
-    padding: 0 15px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-template-rows: repeat(auto-fill, 50px);
@@ -64,6 +62,7 @@
 .note-view-content {
     display: flex;
     flex-direction: column;
+    padding: 0 15px;
     height: calc(100dvh - 220px);
     max-height: calc(100dvh - 220px);
     overflow-y: scroll;
@@ -72,8 +71,9 @@
 .notes {
     outline: none;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-template-rows: repeat(auto-fill, 320px);
+    gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
+    grid-template-rows: repeat(auto-fill, 280px);
     padding-bottom: 5%;
 }
 
