--- a/src/frontend/css/views/sticky_note/stickyWallHomeView.css
+++ b/src/frontend/css/views/sticky_note/stickyWallHomeView.css
@@ -15,48 +15,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fill, 200px);
-    gap: 20px;
+    gap: 40px;
     margin-bottom: 50px;
 }
 
-sticky-board {
-    cursor: pointer;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    border-radius: 10px;
-    transition: 200ms;
-    background-color: var(--card);
-    min-height: 200px;
-}
-
-sticky-board:hover {
-    scale: 1.05;
-}
-
-sticky-board i {
-    margin: auto;
-    font-size: 30px;
-    color: #5c7fdd;
-}
-
-sticky-board div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-sticky-board p {
-    margin: 0;
-    color: var(--important);
-}
-
-sticky-board span {
-    color: var(--less-important)
-}
 
 
 .context-text {
-    color: var(--text);
+    color: var(--less-important);
     margin: 0 0 50px 0px;
     max-width: 300px;
 }
@@ -75,33 +41,6 @@ sticky-board span {
 
 .add-sticky-board-btn:hover {
     background-color: var(--button1-hover);
-}
-
-.sticky-board-filter-container {
-    position: absolute;
-    display: flex;
-    top: 375px;
-    right: 50px;
-    padding: 10px;
-}
-
-.sticky-board-filter-container div {
-    width: 60px;
-    padding: 5px;
-    border-radius: 20px;
-    text-align: center;
-    cursor: pointer;
-    transition: 200ms;
-    color: var(--text);
-
-}
-
-.sticky-board-filter-container div:hover {
-    scale: 1.05;
-}
-
-.selected-board-filter {
-    background-color: var(--button1-bg);
 }
 
 /* _________________________ art code ______________________________*/
