--- a/src/frontend/css/views/sticky_note/stickyWallHomeView.css
+++ b/src/frontend/css/views/sticky_note/stickyWallHomeView.css
@@ -11,6 +11,12 @@
     transition: opacity .7s ease, transform .2s ease;
 }
 
+
+.sticky-home-view h1 {
+    margin: 0;
+}
+
+
 .sticky-boards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -23,7 +29,7 @@
 
 .context-text {
     color: var(--less-important);
-    margin: 0 0 50px 0px;
+    margin: 0 0 50px 0;
     max-width: 300px;
 }
 
@@ -46,6 +52,7 @@
 /* _________________________ art code ______________________________*/
 
 .sticky-image-container {
+    margin-top: 30px;
     width: 220px;
     height: 220px;
     position: relative;
