--- a/src/frontend/css/views/sticky_note/stickyWallView.css
+++ b/src/frontend/css/views/sticky_note/stickyWallView.css
@@ -15,13 +15,19 @@
 .standard-sticky-board-view .description {
     color: var(--less-important);
     max-width: 600px;
+    outline: none;
+    padding: 10px;
+}
+
+
+.standard-sticky-board-view .description img {
+    max-width: 600px;
 }
 
 .standard-sticky-board-view h2 {
     color: var(--important);
+    outline: none;
 }
-
-
 
 .board-wrapper {
     position: relative;
@@ -31,82 +37,66 @@
     height: 100%;
     overflow-x: scroll;
     background-color: rgb(2, 2, 2);
-   }
+}
 
-   .board-wrapper::-webkit-scrollbar {
-    height: 8px;
-    background-color: transparent;
-   }
-
-   .board-wrapper::-webkit-scrollbar-thumb {
-    background-color: #eff0f4;
-    border-radius: 4px;
-   }
-
-
-
-   .single-board-wrapper {
+.single-board-wrapper {
     position: relative;
     padding: 10px;
     border-radius: 5px;
     margin: 50px 0;
-      }
+}
 
-    
 
-    
+.stickies-container {
+    display: grid;
+    grid-template-columns: repeat(5, 200px);
+    grid-auto-rows: 200px; /* Two rows, each 100px tall */
+    justify-content: center;
+    gap: 10px; /* Space between grid items */
 
+}
+
+@media screen and (max-width: 1120px) {
     .stickies-container {
-        display: grid;
-        grid-template-columns: repeat(5, 200px);
-        grid-auto-rows: 200px; /* Two rows, each 100px tall */
-        justify-content: center;
-        gap: 10px; /* Space between grid items */
-    
+        grid-template-columns: repeat(4, 200px);
     }
 
-    @media screen and (max-width: 1120px) {
-        .stickies-container {
-            grid-template-columns: repeat(4, 200px);
-        }
-        
+}
+
+@media screen and (max-width: 940px) {
+    .stickies-container {
+        grid-template-columns: repeat(3, 200px);
+    }
+}
+
+@media screen and (max-width: 690px) {
+    .stickies-container {
+        grid-template-columns: repeat(2, 200px);
     }
 
-    @media screen and (max-width: 940px) {
-        .stickies-container {
-            grid-template-columns: repeat(3, 200px);
-        }
-    }
+}
 
-    @media screen and (max-width: 690px) {
-        .stickies-container {
-            grid-template-columns: repeat(2, 200px);
-        }
-        
-    }
-
-
-   .board-section input::placeholder {
+.board-section input::placeholder {
     color: #ced2e6;
-   }
+}
 
 
-   .sticky-small:hover,
-   .sticky-long:hover,
-   .sticky-wide:hover{
+.sticky-small:hover,
+.sticky-long:hover,
+.sticky-wide:hover{
     scale: 1.025;
-   }
+}
 
-   .no-stickies-message {
+.no-stickies-message {
     position: absolute;
     top: 20%;
     left: 33%;
     font-size: 20px;
     color: #ced2e6;
     font-weight: 300;
-   }
+}
 
-   .add-sticky-btn {
+.add-sticky-btn {
     position:sticky;
     margin-left: auto;
     bottom: 30px;
@@ -120,10 +110,10 @@
     font-size: 30px;
     cursor: pointer;
     transition: 200ms;
-   }
+}
 
-   .add-sticky-btn:hover {
+.add-sticky-btn:hover {
     scale: 1.05;
-   }
+}
 
 
