--- a/src/frontend/css/components/entities/sticky.css
+++ b/src/frontend/css/components/entities/sticky.css
@@ -83,7 +83,7 @@ sticky-board span {
     padding: 10px;
     transition: 200ms;
     border-radius: 5px;
-    background-color: rgb(69, 182, 154);
+    background-color: rgb(216 226 255);
     grid-column: span 1; /* Occupies 1 column */
     grid-row: span 1;    /* Occupies 1 row */
 }
@@ -92,7 +92,7 @@ sticky-board span {
     padding: 10px;
     transition: 200ms;
     border-radius: 5px;
-    background-color: rgb(46, 141, 146);
+    background-color: rgb(193 190 238);
     grid-column: span 1; /* Occupies 1 column */
     grid-row: span 2;    /* Occupies 2 rows */
 }
@@ -101,7 +101,7 @@ sticky-board span {
     padding: 10px;
     transition: 200ms;
     border-radius: 5px;
-    background-color: #607D8B;
+    background-color: #9a9ed0;
     grid-column: span 2; /* Occupies 2 columns */
     grid-row: span 1;    /* Occupies 1 row */
 }
