Cycling through a folders notes is now possible from within the editor

--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -10,7 +10,7 @@
     /*Settings view*/
     --setting-dropdown: #18182d;
     /*Editor View*/
-    --editor-text: #d5d9e0;
+    --editor-text: #bdc6d5;
     --editor-container: #23252e;
     --editor-container-shadow: transparent;
     --editor-container-input: #16171c;
